fix spacing

--- a/frontend/src/Components/Base/Base.module.scss
+++ b/frontend/src/Components/Base/Base.module.scss
@@ -1,7 +1,8 @@
 @use '../../variables';
 
 .base {
-    min-height: calc(100vh - 0vh);
+    // min-height: calc(100vh - 0vh);
+    min-height: calc(100vh - variables.$headerbar);
     width: calc(100vw - (100vw - 100%));
     
     display: flex;
